Service update: small changes in profile query